[kernel] bpf: add a bpf_override_function helper
Message-id: <20181023114647.12260-10-jolsa@redhat.com>
Patchwork-id: 231685
O-Subject: [PATCH RHEL7.7 BZ1640092 09/68] bpf: add a bpf_override_function helper
Bugzilla: 1640092
RH-Acked-by: Tony Camuso <tcamuso@redhat.com>
RH-Acked-by: Yauheni Kaliuta <yauheni.kaliuta@redhat.com>

Bugzilla: 1640092
https://bugzilla.redhat.com/show_bug.cgi?id=1640092

upstream
========
commit dd0bb688eaa241b5655d396d45366cba9225aed9
Author: Josef Bacik <jbacik@fb.com>
Date: Tue Nov 7 15:28:42 2017 -0500

description
===========
Error injection is sloppy and very ad-hoc.  BPF could fill this niche
perfectly with it's kprobe functionality.  We could make sure errors are
only triggered in specific call chains that we care about with very
specific situations.  Accomplish this with the bpf_override_funciton
helper.  This will modify the probe'd callers return value to the
specified value and set the PC to an override function that simply
returns, bypassing the originally probed function.  This gives us a nice
clean way to implement systematic error injection for all of our code
paths.

RHEL7
=====
FN(override_return) is already defined.

Using rh_data in trace_kprobe_ftrace to get the struct trace_kprobe.

Renaming 'struct trace_event_call' to 'struct ftrace_event_call',
because thats the name in RHEL7.

Using __kprobes instead of NOKPROBE_SYMBOL.

Small conflicts in kprobe_perf_func, due to other already
taken changes in this function.

Signed-off-by: Bruno E. O. Meneguele <bmeneg@redhat.com>

--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -51,6 +51,7 @@ config X86
 	select HAVE_KRETPROBES
 	select HAVE_OPTPROBES
 	select HAVE_KPROBES_ON_FTRACE
+	select HAVE_KPROBE_OVERRIDE
 	select HAVE_FTRACE_MCOUNT_RECORD
 	select HAVE_FENTRY if X86_64
 	select HAVE_ARCH_MMAP_RND_BITS		if MMU
