--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -194,6 +194,9 @@ config HAVE_OPTPROBES
 config HAVE_KPROBES_ON_FTRACE
 	bool
 
+config HAVE_KPROBE_OVERRIDE
+	bool
+
 config HAVE_NMI_WATCHDOG
 	bool
 #
