[tools] selftests: Add support files for powerpc tests
Message-id: <1542029012-8520-2-git-send-email-didoming@redhat.com>
Patchwork-id: 232813
O-Subject: [RHEL7.7 PATCH BZ1632258 1/3] selftests: Add support files for powerpc tests
Bugzilla: 1632258
RH-Acked-by: Jarod Wilson <jarod@redhat.com>
RH-Acked-by: Steve Best <sbest@redhat.com>

From: Michael Ellerman <michael@ellerman.id.au>

commit 2fae0d7ced53ef2e7b4d87d84986ec3ff7cf798f

This commit adds support code used by upcoming powerpc tests.

Signed-off-by: Michael Ellerman <michael@ellerman.id.au>
Signed-off-by: Benjamin Herrenschmidt <benh@kernel.crashing.org>
Signed-off-by: Bruno E. O. Meneguele <bmeneg@redhat.com>

--- a/tools/testing/selftests/powerpc/tm/Makefile
+++ b/tools/testing/selftests/powerpc/tm/Makefile
@@ -2,7 +2,7 @@ PROGS := tm-resched-dscr tm-syscall
 
 all: $(PROGS)
 
-$(PROGS):
+$(PROGS): ../harness.c
 
 tm-syscall: tm-syscall-asm.S
 tm-syscall: CFLAGS += -mhtm -I../../../../../usr/include
